# sentence_classify

./: .gitignore  README.md  pyproject.toml
sentence_classify/: sentence_classify.py
tests/: test_sentence_classify.py
