[tool.poetry]
name = "sentence_classify"
version = "0.1.0"
description = ""
authors = ["LuiGGi629 <wojtek.felix.zuber@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
polyglot = "^16.7.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
flake8 = "^3.8.4"
mypy = "^0.790"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
